# tfm

./: .coverage  .gitignore  ARCHIVE_OPERATIONS_IMPLEMENTATION_SUMMARY.md  ARCHIVE_OPERATIONS_REFACTORING_SUMMARY.md  BATCH_RENAME_IMPLEMENTATION_SUMMARY.md  BEYONDCOMPARE_INTEGRATION.md  CLAUDE.md  COLOR_DEBUGGING_SUMMARY.md  COLOR_FIX_SUMMARY.md  CONFIGURATION_SYSTEM.md  CROSS_STORAGE_MOVE_IMPLEMENTATION_SUMMARY.md  CURSES_FIX.md  CURSOR_MOVEMENT_ENHANCEMENT.md  DOT_KEY_HIDDEN_TOGGLE_IMPLEMENTATION.md  EXTERNAL_PROGRAMS_FEATURE.md  FAVORITE_DIRECTORIES_IMPLEMENTATION.md  FILE_DETAILS_FEATURE.md  FILE_OPERATIONS_REFACTORING_SUMMARY.md  FINAL_COLOR_SOLUTION.md  HELP_DIALOG_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  LICENSE  MANIFEST.in  MIGRATION_SUMMARY.md  MULTIPATTERN_DEMO.md  MULTI_CHOICE_DIALOG.md  Makefile  README.md  REMOTE_LOG_MONITORING_SUMMARY.md  REMOTE_PATH_CLEANUP_OPTIMIZATION_SUMMARY.md  RENAME_SUMMARY.md  REORGANIZATION_SUMMARY.md  S3_CACHE_FIX_SUMMARY.md  S3_CACHE_INVALIDATION_IMPLEMENTATION_SUMMARY.md  S3_CACHING_OPTIMIZATION_SUMMARY.md  S3_COPY_FIX_SUMMARY.md  S3_DIRECTORY_DELETION_FIX_SUMMARY.md  S3_ITERDIR_CACHING_IMPROVEMENT_SUMMARY.md  S3_MOVE_FIX_SUMMARY.md  (+79 more)
demo/: demo_about_menu.py  demo_adaptive_fps.py  demo_archive_dual_pane_operations.py  demo_archive_extraction_confirmation_shortening.py  demo_archive_file_viewing.py  demo_archive_metadata_display.py  demo_archive_operations.py  demo_archive_search.py  demo_archive_sorting.py  demo_archive_unsupported_operations.py  demo_base_list_dialog_refactoring.py  demo_batch_rename_always_preview.py  demo_batch_rename_conflict_detection.py  demo_batch_rename_empty_destination.py  demo_batch_rename_file_order.py  demo_batch_rename_partial_replacement.py  demo_batch_rename_search_match_highlighting.py  demo_character_drawing_metrics.py  demo_character_drawing_optimization.py  demo_clipboard_copy.py  demo_color_coding.py  demo_color_debugging.py  demo_color_scheme_background_fix.py  demo_compare_selection_directories.py  demo_compare_selection_nfd.py  demo_continuous_animation.py  demo_copy_log_clipboard.py  demo_copy_progress_threading.py  demo_coregraphics_backend.py  demo_coregraphics_resize.py  demo_create_directory_key_binding.py  demo_cursor_history.py  demo_cursor_history_dialog.py  demo_cursor_history_tab_switching.py  demo_date_column_width.py  demo_date_format.py  demo_dialog_rendering_optimization.py  demo_dialog_scroll_threshold_fix.py  (+89 more)
ttk/: MANIFEST.in  Makefile  README.md  __init__.py  input_event.py  py.typed  pyproject.toml  renderer.py  setup.py  ttk_mouse_event.py  wide_char_utils.py
ttk/backends/: __init__.py  coregraphics_backend.py  coregraphics_render.cpp  curses_backend.py  metal_backend.py
ttk/demo/: __init__.py  backend_switching.py  demo_centered_text_grid.py  demo_coregraphics_low_level_api.py  demo_ttk.py  demo_unicode_emoji.py  demo_window_resize_snapping.py  standalone_app.py  test_interface.py
ttk/doc/: API_REFERENCE.md  BACKEND_IMPLEMENTATION_GUIDE.md  BOX_DRAWING_CHARACTERS.md  COORDINATE_SYSTEM.md  COREGRAPHICS_BACKEND.md  EVENT_SYSTEM.md  EXAMPLES.md  KEYCODE_MIGRATION_GUIDE.md  MIGRATION_GUIDE_V0.2.0.md  USER_GUIDE.md
ttk/doc/dev/: BACKEND_DECISION_SUMMARY.md  BACKEND_SWITCHING_DEMO.md  COMMAND_PARSING_IMPLEMENTATION.md  COREGRAPHICS_CHECKPOINT_20_SUMMARY.md  COREGRAPHICS_COLOR_MANAGEMENT_IMPLEMENTATION.md  COREGRAPHICS_CURSOR_MANAGEMENT_IMPLEMENTATION.md  COREGRAPHICS_DIMENSIONS_IMPLEMENTATION.md  COREGRAPHICS_DISPLAY_REFRESH_IMPLEMENTATION.md  COREGRAPHICS_DOCUMENTATION_COMPLETION.md  COREGRAPHICS_DRAWING_OPERATIONS_IMPLEMENTATION.md  COREGRAPHICS_DRAWRECT_IMPLEMENTATION.md  COREGRAPHICS_ERROR_HANDLING_IMPLEMENTATION.md  COREGRAPHICS_KEYBOARD_INPUT_IMPLEMENTATION.md  COREGRAPHICS_LOW_LEVEL_API_OPTIMIZATION.md  COREGRAPHICS_SHUTDOWN_IMPLEMENTATION.md  COREGRAPHICS_TASK_21_COMPLETION_SUMMARY.md  COREGRAPHICS_TASK_22_COMPLETION_SUMMARY.md  COREGRAPHICS_TASK_23_COMPLETION_SUMMARY.md  COREGRAPHICS_TASK_24_COMPLETION_SUMMARY.md  COREGRAPHICS_TASK_25_COMPLETION_SUMMARY.md  COREGRAPHICS_TASK_28_COMPLETION_SUMMARY.md  COREGRAPHICS_TTKVIEW_IMPLEMENTATION.md  COREGRAPHICS_UNICODE_EMOJI_TESTING.md  COREGRAPHICS_WINDOW_CREATION_IMPLEMENTATION.md  CORE_GRAPHICS_POC.md  CPP_RENDERING_API.md  CPP_RENDERING_ARCHITECTURE.md  CPP_RENDERING_BUILD.md  CPP_RENDERING_PERFORMANCE.md  CPP_RENDERING_PROFILING_GUIDE.md  CPP_RENDERING_TROUBLESHOOTING.md  CURSES_BACKGROUND_FIX.md  DEMO_STRUCTURE.md  IME_MARKED_TEXT_RENDERING.md  LINE_RENDERING_FIX.md  MACOS_RENDERING_COMPARISON.md  METAL_BACKEND_STATUS.md  METAL_CHARACTER_GRID_IMPLEMENTATION.md  METAL_COLOR_MANAGEMENT_IMPLEMENTATION.md  METAL_DRAWING_OPERATIONS_IMPLEMENTATION.md  (+24 more)
ttk/serialization/: __init__.py  command_serializer.py
ttk/test/: __init__.py  demo_command_parsing.py  demo_command_pretty_print.py  demo_utils.py  test_backend_switching_demo.py  test_box_drawing_chars.py  test_cache_integration.py  test_color_cache.py  test_command_parsing.py  test_command_serialization.py  test_coregraphics_api_compliance.py  test_coregraphics_color_management.py  test_coregraphics_cursor_management.py  test_coregraphics_dimensions.py  test_coregraphics_drag_and_drop.py  test_coregraphics_drawrect.py  test_coregraphics_font_loading.py  test_coregraphics_initialization.py  test_coregraphics_keyboard_input.py  test_coregraphics_menu.py  test_coregraphics_shutdown.py  test_coregraphics_window_creation.py  test_cpp_renderer_data_structures.py  test_cpp_renderer_font_cache.py  test_cpp_renderer_import.py  test_cpp_renderer_parsing.py  test_curses_backend_shift_keys.py  test_curses_background.py  test_curses_color_management.py  test_curses_drawing.py  test_curses_fullcolor.py  test_curses_input_handling.py  test_curses_window_management.py  test_cursor_colorcache_integration.py  test_demo_application.py  test_dirty_region_calculator.py  test_drawrect_batching_logic.py  test_drawrect_phase1_batching.py  test_drawrect_phase2_character_drawing.py  test_emoji_surrogate_pairs.py  (+44 more)
ttk/utils/: __init__.py  utils.py
(+1435 files in other folders)
